# pySigma-backend-QRadar-AQL

./: .gitmodules  README.md  generate_readme.py  pyproject.toml  readme_template.md
.github/workflows/: test.yml
sigma/backends/QRadarAQL/: QRadarAQL.py  __init__.py
sigma/mapping/: fields.py  logsources.py  products.py  services.py
sigma/pipelines/QRadarAQL/: QRadarAQL.py  QRadarAQL_fields.py  QRadarAQL_payload.py  __init__.py
tests/: test_all_modifier_QRadarAQL.py  test_backend_QRadarAQL.py  test_pipeline_fields_QRadarAQL.py  test_pipeline_payload_QRadarAQL.py  test_pipelines_QRadarAQL.py
